--- a/conditional_chains.ipynb
+++ b/conditional_chains.ipynb
@@ -179,7 +179,7 @@
     "branch_chain = RunnableBranch(\n",
     "    (lambda x: x.sentiment == \"positive\", prompt2 | model | parser),\n",
     "    (lambda x: x.sentiment == \"negative\", prompt3 | model | parser),\n",
-    "    lambda x: \"Failed!\"  # By default changes to RunnableLambda\n",
+    "    lambda _: \"Failed!\"  # By default changes to RunnableLambda\n",
     ")"
    ]
   },
